# geoalmanac

./: .gitignore  README.md  pyproject.toml  update_data.sh
.agent/workflows/: add_trip.md
.github/workflows/: static.yml
src/: process_ski_data.py
src/geoalmanac/: main.py  process_gpx.py  process_ski_data.py
src/web/: app.js  index.html  style.css
src/web/data/: hikes.json
