[project]
name = "geoalmanac"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gpxpy",
    "pillow",
    "pillow-heif",
    "python-dateutil>=2.9.0.post0",
]

[project.scripts]
geoalmanac = "geoalmanac.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
